compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_int_with_multiple_underscores.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 915
expression: "\npub fn main(x) {\n  case x {\n    1_000_000 -> \"one million\"\n    1000000 -> \"also one million\"\n    _ -> \"other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    1_000_000 -> "one million"
    1000000 -> "also one million"
    _ -> "other"
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     1000000 -> "also one million"
  │     ^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
