compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__redundant_int_with_underscores.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 900
expression: "\npub fn main(x) {\n  case x {\n    10 -> \"ten\"\n    1_0 -> \"also ten\"\n    _ -> \"other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    10 -> "ten"
    1_0 -> "also ten"
    _ -> "other"
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     1_0 -> "also ten"
  │     ^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
