compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__result_bool_8.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 268
expression: "\npub fn main(x) {\n  case x {\n    Ok(False) -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    Ok(False) -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     Ok(False) -> 1
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Ok(True)
    Error(_)
